--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,7 @@ h1 a, h2 a, h3 a, h4 a {
 
 #side-bar h1 {
 	margin-bottom: 4px;
+	font-size: 32px;
 }
 
 #side-bar .subtitle {
@@ -76,6 +77,7 @@ h1 a, h2 a, h3 a, h4 a {
 	border-bottom: 1px solid #ddd;
 	padding-bottom: 4px;
 	margin-bottom: 0;
+	font-size: 28px;
 }
 
 .meta {
