--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 		<!--CSS-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="/static/image/favicon.png" type="image/png">
+		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/style.css">
 	</head>
 	<body>
