--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" href="/static/image/favicon.png" type="image/png">
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/style.css">
+		<link rel="stylesheet" href="/static/css/pygments.css">
 	</head>
 	<body>
 		<div id="container">
