modify style, add disqus for pages

--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@ ${post.title} |
 <%block name="main">
 <article>
 	<header>
-	<h1><a href="/${post.uri}">${post.title}</a></h1>
+	<h1>${post.title}</h1>
 		<span class="meta">
 			<time>${post.date.strftime('%Y-%m-%d')}</time>
 			| Tags: <a href="#">test</a>
