--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 		<div id="container">
 			<aside id="side-bar">
 				<header>
-					<h1>Znote</h1>
+					<h1><a href="/">Znote</a></h1>
 					<p class="subtitle">快乐生活，笑对人生</p>
 				</header>
 				<nav>
