--- a/templates/post.html
+++ b/templates/post.html
@@ -15,7 +15,7 @@ ${post.title} |
 		</span>
 	</header>
 	<section>
-		${post.html}
+		${post.content}
 	</section>
 </article>
 <div id="disqus_thread"></div>
