--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 body {
 	color: #3b3b41;
 	border: none;
-	font-family: 'Open Sans', sans-serif;
+	font-family:"Galdeano","Hiragino Sans GB", "Microsoft YaHei", sans-serif;
 	font-weight: 400;
 }
 
