--- a/templates/base.html
+++ b/templates/base.html
@@ -1,36 +1,32 @@
-## -*- coding: utf-8 -*- 
-<!doctype html>
-<html>
-	<head>
-		<title><%block name="title"></%block>Znote</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<!--CSS-->
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="shortcut icon" href="/static/image/favicon.png" type="image/png">
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/style.css">
-		<link rel="stylesheet" href="/static/css/pygments.css">
-	</head>
-	<body>
-		<div id="container">
-			<aside id="side-bar">
-				<header>
-					<h1><a href="/">Znote</a></h1>
-					<p class="subtitle">快乐生活，笑对人生</p>
-				</header>
-				<nav>
-					<ul>
-						<li><a href="/">所有文章</a></li>
-						% for page in info['pages']:
-						<li><a href="/${page.uri}">${page.title}</a></li>
-						% endfor
-					</ul>
-				</nav>
-			</aside>
-			<section id="main">
-				<%block name="main">
-				</%block>
-			</section>
-		</div>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title><%block name="title"></%block>Znote</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="/static/css/style.css" />
+	<link rel="stylesheet" href="/static/css/pygments.css" />
+</head>
+<body>
+    <div id="container">
+      <div id="main" role="main">
+        <header>
+		<h1>Znote</h1>
+		</header>
+
+     <nav>
+		<span><a title="home page" class="" href="/">home</a></span>
+        % for page in info['pages']:
+        <span><a href="/${page.uri}" title="${page.title}">${page.title}</a></span>
+        % endfor
+     </nav>
+
+     <article class="content">
+        <section class="post">
+            <%block name="main"></%block>
+        </section>
+     </article>
+         <div id="copy">&copy; Powered by Peanut | Themed by <a href="http://lhzhang.com" title="sext ii">sext ii</a></div>
+      </div>
+    </div> <!--! end of #container -->
+  </body>
 </html>
