--- a/templates/post.html
+++ b/templates/post.html
@@ -6,29 +6,22 @@ ${post.title} |
 </%block>
 
 <%block name="main">
-<article>
-	<header>
-	<h1>${post.title}</h1>
-		<span class="meta">
-			<time>${post.date.strftime('%Y-%m-%d')}</time>
-			% if post.tags:
-			| Tags: 
-			% for tag in post.tags:
-			<a href="/${tag.uri}">${tag.name}</a>
-			% endfor
-			%endif
-		</span>
-	</header>
-	<section>
 		${post.content}
 	</section>
-</article>
+	<section class="meta">
+		<span class="tags">tagged by 
+		% for tag in post.tags:
+			<a href="/${tag.uri}">${tag.name}</a>
+		% endfor
+		</span>
+
+		<span class="time">&nbsp;<time datetime="${post.date.strftime('%Y-%m-%d')}">${post.date.strftime('%Y-%m-%d')}</time></span>
+	</section>
+<hr/>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'zqqf16'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
+    var disqus_shortname = 'zqqf16';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -37,5 +30,5 @@ ${post.title} |
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+
 </%block>
