add google meta

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 ## -*- coding: utf-8 -*- 
 <%inherit file="base.html"/>
 
+<%block name="head">
+	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
+</%block>
+
 <%block name="main">
 	<ul class="listing">
 	% for post in posts:
