--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 <%block name="head">
 	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
+	<meta content="Zqqf16的个人BLog，记录我的生活、学习、以及心情。" name="description">
 </%block>
 
 <%block name="main">
