--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,4 +71,5 @@ input.text {width:90%;}
 pre { display: block; padding: 9.5px; margin: 0 0 10px; font-size: 13px; line-height: 20px; word-break: break-all; word-wrap: break-word; white-space: pre; white-space: pre-wrap; background-color: #f5f5f5; border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.15); -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
 code, pre { padding: 0 3px 2px; font-family: Monaco,Menlo,Consolas,"Courier New",monospace; font-size: 12px; color: #333; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
 .codehilite { border-radius: 4px; background: #272822; }
+.codehilite code, .codehilite pre { color: #f8f8f2; }
 .codehilite pre { background: #272822; }
