--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="main" role="main">
         <header>
-		<h1>Znote</h1>
+		<h1><%block name="page_title">Znote</%block></h1>
 		</header>
 
      <nav>
