--- a/templates/post.html
+++ b/templates/post.html
@@ -5,6 +5,10 @@
 ${post.title} |
 </%block>
 
+<%block name="page_title">
+${post.title}
+</%block>
+
 <%block name="main">
 		${post.content}
 	</section>
