--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <%block name="head">
 	<meta name="google-site-verification" content="FW_F-Ez0TldaAzvGUQ2kioxNpne-KbKCiSu1y_5bXTU" />
 	<meta content="Zqqf16的个人BLog，记录我的生活、学习、以及心情。" name="description">
+	<link href="https://plus.google.com/107911439044090080809" rel="publisher" />
 </%block>
 
 <%block name="main">
