--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title><%block name="title"></%block>Znote</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
 	<%block name="head"></%block>
