--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
      <nav>
 		<span><a title="home page" class="" href="/">home</a></span>
         % for page in info['pages']:
-        <span><a href="/${page.uri}" title="${page.title}">${page.title}</a></span>
+        <span><a href="/${page.url}" title="${page.title}">${page.title}</a></span>
         % endfor
      </nav>
 
