--- a/templates/tag.html
+++ b/templates/tag.html
@@ -14,7 +14,7 @@ ${tag.name}
 	% for post in posts:
 		<li class="listing-item">
 			<time datetime="${post.date.strftime('%Y-%m-%d')}">${post.date.strftime('%Y-%m-%d')}</time>
-			<a href="/${post.uri}">${post.title}</a>
+			<a href="/${post.url}">${post.title}</a>
 		</li>
 	% endfor
 	</ul>
