--- a/templates/post.html
+++ b/templates/post.html
@@ -16,7 +16,7 @@ ${post.title}
 		% if post.tags:
 		<span class="tags">Tagged by 
 		% for tag in post.tags:
-			<a href="/${tag.url}">${tag.name}</a>
+			<a href="/${tag.path}">${tag.name}</a>
 		% endfor
 		</span>
 		% endif
