1. 修复了页面标题显示不正常的问题 2. 修复了Tag页面文章显示问题

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 ## -*- coding: utf-8 -*- 
 <%inherit file="base.html"/>
 
-<%block name="title">
+<%block name="header">
 ${page.title} | 
 </%block>
 
