--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title><%block name="title"></%block>${title}</title>
+	<title><%block name="header"></%block>${title}</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://zqqf16.info/rss.xml" />
