--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,7 +1,7 @@
 ## -*- coding: utf-8 -*- 
 <%inherit file="base.html"/>
 
-<%block name="title">
+<%block name="header">
 ${tag.name} | 
 </%block>
 
@@ -11,7 +11,7 @@ ${tag.name}
 
 <%block name="main">
 	<ul class="listing">
-	% for post in posts:
+	% for post in tag.posts:
 		<li class="listing-item">
 			<time datetime="${post.date.strftime('%Y-%m-%d')}">${post.date.strftime('%Y-%m-%d')}</time>
 			<a href="/${post.url}">${post.title}</a>
