移除了Google、Baidu等相关信息

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	<title><%block name="header"></%block>${title}</title>
 	<link rel="stylesheet" href="/static/css/style.css" />
 	<link rel="stylesheet" href="/static/css/pygments.css" />
-	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://zqqf16.info/rss.xml" />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://${domain}/rss.xml" />
 	<%block name="head"></%block>
 </head>
 <body>
@@ -30,9 +30,5 @@
 	 <div id="copy">&copy; Powered by <a href="https://github.com/zqqf16/zqqf16.github.com" title="Peanut">Peanut</a> | Themed by <a href="http://lhzhang.com" title="sext ii">sext ii</a></div>
       </div>
     </div> <!--! end of #container -->
-    <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0100dcff30150b1fe336a8b5d0d50684' type='text/javascript'%3E%3C/script%3E"));
-    </script>
   </body>
 </html>
