--- a/static/css/pygments.css
+++ b/static/css/pygments.css
@@ -1,59 +1,59 @@
-lite .hll { background-color: #ffffcc }
-.codehilite .c { color: #999988; font-style: italic } /* Comment */
-.codehilite .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.codehilite .k { font-weight: bold } /* Keyword */
-.codehilite .o { font-weight: bold } /* Operator */
-.codehilite .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.codehilite .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.codehilite .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.codehilite .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.codehilite .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
+.codehilite .hll { background-color: #49483e }
+.codehilite .c { color: #75715e } /* Comment */
+.codehilite .err { color: #960050; background-color: #1e0010 } /* Error */
+.codehilite .k { color: #66d9ef } /* Keyword */
+.codehilite .l { color: #ae81ff } /* Literal */
+.codehilite .n { color: #f8f8f2 } /* Name */
+.codehilite .o { color: #f92672 } /* Operator */
+.codehilite .p { color: #f8f8f2 } /* Punctuation */
+.codehilite .cm { color: #75715e } /* Comment.Multiline */
+.codehilite .cp { color: #75715e } /* Comment.Preproc */
+.codehilite .c1 { color: #75715e } /* Comment.Single */
+.codehilite .cs { color: #75715e } /* Comment.Special */
 .codehilite .ge { font-style: italic } /* Generic.Emph */
-.codehilite .gr { color: #aa0000 } /* Generic.Error */
-.codehilite .gh { color: #999999 } /* Generic.Heading */
-.codehilite .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.codehilite .go { color: #888888 } /* Generic.Output */
-.codehilite .gp { color: #555555 } /* Generic.Prompt */
 .codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #aaaaaa } /* Generic.Subheading */
-.codehilite .gt { color: #aa0000 } /* Generic.Traceback */
-.codehilite .kc { font-weight: bold } /* Keyword.Constant */
-.codehilite .kd { font-weight: bold } /* Keyword.Declaration */
-.codehilite .kn { font-weight: bold } /* Keyword.Namespace */
-.codehilite .kp { font-weight: bold } /* Keyword.Pseudo */
-.codehilite .kr { font-weight: bold } /* Keyword.Reserved */
-.codehilite .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.codehilite .m { color: #009999 } /* Literal.Number */
-.codehilite .s { color: #bb8844 } /* Literal.String */
-.codehilite .na { color: #008080 } /* Name.Attribute */
-.codehilite .nb { color: #999999 } /* Name.Builtin */
-.codehilite .nc { color: #445588; font-weight: bold } /* Name.Class */
-.codehilite .no { color: #008080 } /* Name.Constant */
-.codehilite .ni { color: #800080 } /* Name.Entity */
-.codehilite .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.codehilite .nf { color: #990000; font-weight: bold } /* Name.Function */
-.codehilite .nn { color: #555555 } /* Name.Namespace */
-.codehilite .nt { color: #000080 } /* Name.Tag */
-.codehilite .nv { color: #008080 } /* Name.Variable */
-.codehilite .ow { font-weight: bold } /* Operator.Word */
-.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
-.codehilite .mf { color: #009999 } /* Literal.Number.Float */
-.codehilite .mh { color: #009999 } /* Literal.Number.Hex */
-.codehilite .mi { color: #009999 } /* Literal.Number.Integer */
-.codehilite .mo { color: #009999 } /* Literal.Number.Oct */
-.codehilite .sb { color: #bb8844 } /* Literal.String.Backtick */
-.codehilite .sc { color: #bb8844 } /* Literal.String.Char */
-.codehilite .sd { color: #bb8844 } /* Literal.String.Doc */
-.codehilite .s2 { color: #bb8844 } /* Literal.String.Double */
-.codehilite .se { color: #bb8844 } /* Literal.String.Escape */
-.codehilite .sh { color: #bb8844 } /* Literal.String.Heredoc */
-.codehilite .si { color: #bb8844 } /* Literal.String.Interpol */
-.codehilite .sx { color: #bb8844 } /* Literal.String.Other */
-.codehilite .sr { color: #808000 } /* Literal.String.Regex */
-.codehilite .s1 { color: #bb8844 } /* Literal.String.Single */
-.codehilite .ss { color: #bb8844 } /* Literal.String.Symbol */
-.codehilite .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.codehilite .vc { color: #008080 } /* Name.Variable.Class */
-.codehilite .vg { color: #008080 } /* Name.Variable.Global */
-.codehilite .vi { color: #008080 } /* Name.Variable.Instance */
-.codehilite .il { color: #009999 } /* Literal.Number.Integer.Long */
+.codehilite .kc { color: #66d9ef } /* Keyword.Constant */
+.codehilite .kd { color: #66d9ef } /* Keyword.Declaration */
+.codehilite .kn { color: #f92672 } /* Keyword.Namespace */
+.codehilite .kp { color: #66d9ef } /* Keyword.Pseudo */
+.codehilite .kr { color: #66d9ef } /* Keyword.Reserved */
+.codehilite .kt { color: #66d9ef } /* Keyword.Type */
+.codehilite .ld { color: #e6db74 } /* Literal.Date */
+.codehilite .m { color: #ae81ff } /* Literal.Number */
+.codehilite .s { color: #e6db74 } /* Literal.String */
+.codehilite .na { color: #a6e22e } /* Name.Attribute */
+.codehilite .nb { color: #f8f8f2 } /* Name.Builtin */
+.codehilite .nc { color: #a6e22e } /* Name.Class */
+.codehilite .no { color: #66d9ef } /* Name.Constant */
+.codehilite .nd { color: #a6e22e } /* Name.Decorator */
+.codehilite .ni { color: #f8f8f2 } /* Name.Entity */
+.codehilite .ne { color: #a6e22e } /* Name.Exception */
+.codehilite .nf { color: #a6e22e } /* Name.Function */
+.codehilite .nl { color: #f8f8f2 } /* Name.Label */
+.codehilite .nn { color: #f8f8f2 } /* Name.Namespace */
+.codehilite .nx { color: #a6e22e } /* Name.Other */
+.codehilite .py { color: #f8f8f2 } /* Name.Property */
+.codehilite .nt { color: #f92672 } /* Name.Tag */
+.codehilite .nv { color: #f8f8f2 } /* Name.Variable */
+.codehilite .ow { color: #f92672 } /* Operator.Word */
+.codehilite .w { color: #f8f8f2 } /* Text.Whitespace */
+.codehilite .mf { color: #ae81ff } /* Literal.Number.Float */
+.codehilite .mh { color: #ae81ff } /* Literal.Number.Hex */
+.codehilite .mi { color: #ae81ff } /* Literal.Number.Integer */
+.codehilite .mo { color: #ae81ff } /* Literal.Number.Oct */
+.codehilite .sb { color: #e6db74 } /* Literal.String.Backtick */
+.codehilite .sc { color: #e6db74 } /* Literal.String.Char */
+.codehilite .sd { color: #e6db74 } /* Literal.String.Doc */
+.codehilite .s2 { color: #e6db74 } /* Literal.String.Double */
+.codehilite .se { color: #ae81ff } /* Literal.String.Escape */
+.codehilite .sh { color: #e6db74 } /* Literal.String.Heredoc */
+.codehilite .si { color: #e6db74 } /* Literal.String.Interpol */
+.codehilite .sx { color: #e6db74 } /* Literal.String.Other */
+.codehilite .sr { color: #e6db74 } /* Literal.String.Regex */
+.codehilite .s1 { color: #e6db74 } /* Literal.String.Single */
+.codehilite .ss { color: #e6db74 } /* Literal.String.Symbol */
+.codehilite .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.codehilite .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.codehilite .vg { color: #f8f8f2 } /* Name.Variable.Global */
+.codehilite .vi { color: #f8f8f2 } /* Name.Variable.Instance */
+.codehilite .il { color: #ae81ff } /* Literal.Number.Integer.Long */
