--- a/templates/tag.html
+++ b/templates/tag.html
@@ -2,11 +2,11 @@
 <%inherit file="base.html"/>
 
 <%block name="header">
-${tag.name} | 
+${tag.title} | 
 </%block>
 
 <%block name="page_title">
-${tag.name}
+${tag.title}
 </%block>
 
 <%block name="main">
