--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,9 +20,9 @@ blockquote p{margin:0;padding:0;}
 #container{width:600px;margin:2em auto;display:block;padding:0 2em;}
 .content{font-size:16px;line-height:24px;}
 .content img{max-width:600px;display:block;margin:4px auto;-webkit-box-shadow:#999 1px 1px 4px;-moz-box-shadow:#999 1px 1px 4px;box-shadow:#999 1px 1px 4px;}
-#tag_cloud{margin-bottom: 1em;}
-#tag_cloud a:hover{color:#333333 !important;text-decoration:none;}
-.listing-item,.listing-seperator{list-style-type:none;}
+.tag-cloud{margin-bottom: 1em;}
+.tag-cloud a:hover{color:#333333 !important;text-decoration:none;}
+.listing-item,.tag-list,.listing-seperator{list-style-type:none;}
 .listing-item a{padding:.2em 1em;}
 .listing-item time{color:#999999;}
 .listing-seperator{font-weight:bold;}
@@ -73,3 +73,5 @@ code, pre { padding: 0 3px 2px; font-family: Monaco,Menlo,Consolas,"Courier New"
 .codehilite { border-radius: 4px; background: #272822; }
 .codehilite code, .codehilite pre { color: #f8f8f2; }
 .codehilite pre { background: #272822; }
+.tag-list { display:inline-block; padding-right:1em;}
+.tag-list span{color:#999999;}
