--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
      <nav>
 		<span><a title="home page" class="" href="/">home</a></span>
 		<span><a title="标签" class="" href="/tags/index.html">标签</a></span>
+		<span><a title="订阅" class="" href="/rss.xml">订阅</a></span>
         % for page in pages:
         <span><a href="/${page.url}" title="${page.title}">${page.title}</a></span>
         % endfor
