--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 		<span><a title="home page" class="" href="/">home</a></span>
 		<span><a title="标签" class="" href="/tags/index.html">标签</a></span>
 		<span><a title="订阅" class="" href="/rss.xml">订阅</a></span>
-        % for page in pages:
-        <span><a href="/${page.url}" title="${page.title}">${page.title}</a></span>
+        % for post in tops:
+        <span><a href="/${post.url}" title="${post.title}">${post.title}</a></span>
         % endfor
      </nav>
 
