--- a/templates/tag.html
+++ b/templates/tag.html
@@ -2,16 +2,16 @@
 <%inherit file="base.html"/>
 
 <%block name="header">
-${tag.title} | 
+${this.title} | 
 </%block>
 
 <%block name="page_title">
-${tag.title}
+${this.title}
 </%block>
 
 <%block name="main">
 	<ul class="listing">
-	% for post in tag.posts:
+	% for post in this.posts:
 		<li class="listing-item">
 			<time datetime="${post.date.strftime('%Y-%m-%d')}">${post.date.strftime('%Y-%m-%d')}</time>
 			<a href="/${post.url}">${post.title}</a>
