--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
   			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   		ga('create', 'UA-41282906-2', 'zorro.im');
+		ga('require', 'displayfeatures');
   		ga('send', 'pageview');
 	</script>
 </body>
