--- a/static/css/style.css
+++ b/static/css/style.css
@@ -317,6 +317,10 @@ q {
     line-height: 22px;
 }
 
+.post-content h2 + h3 {
+    margin-top: 1em;
+}
+
 h4 {
     font-size: 14px;
     margin: 25px 0 10px;
